ChatView rework